fix(Exchange): order history on mobile

--- a/assets/css/modules/_buy-sell.scss
+++ b/assets/css/modules/_buy-sell.scss
@@ -448,4 +448,10 @@ input[type="radio"]:checked + label {
   .exchange-status {
     grid-template-columns: 100%;
   }
+  .shift-history {
+    grid-template-columns: 25% 15% 30% 30%;
+  }
+  .exchange-trade {
+    grid-template-columns: 25% 15% 30% 30%;
+  }
 }
